Compatibility with Java 1.8